// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tour component renders correctly 1`] = `
<Joyride
  callback={[Function]}
  continuous={true}
  debug={false}
  disableCloseOnEsc={false}
  disableOverlay={false}
  disableOverlayClose={false}
  disableScrollParentFix={false}
  disableScrolling={true}
  getHelpers={[Function]}
  hideBackButton={false}
  run={true}
  scrollDuration={300}
  scrollOffset={20}
  scrollToFirstStep={false}
  showProgress={false}
  showSkipButton={false}
  spotlightClicks={false}
  spotlightPadding={10}
  stepIndex={0}
  steps={
    Array [
      Object {
        "content": "Test 1",
        "disableBeacon": true,
        "target": ".test-1",
      },
      Object {
        "content": "Test 2",
        "disableBeacon": true,
        "target": ".test-2",
      },
    ]
  }
  styles={
    Object {
      "buttonBack": Object {
        "color": undefined,
      },
      "options": Object {
        "arrowColor": "#fff",
        "backgroundColor": "#fff",
        "primaryColor": undefined,
        "textColor": "rgba(0, 0, 0, 0.87)",
        "zIndex": 1500,
      },
    }
  }
/>
`;

exports[`Tour component renders correctly in dark mode 1`] = `
<Joyride
  callback={[Function]}
  continuous={true}
  debug={false}
  disableCloseOnEsc={false}
  disableOverlay={false}
  disableOverlayClose={false}
  disableScrollParentFix={false}
  disableScrolling={true}
  getHelpers={[Function]}
  hideBackButton={false}
  run={false}
  scrollDuration={300}
  scrollOffset={20}
  scrollToFirstStep={false}
  showProgress={false}
  showSkipButton={false}
  spotlightClicks={false}
  spotlightPadding={10}
  stepIndex={0}
  steps={
    Array [
      Object {
        "content": "Test 1",
        "disableBeacon": true,
        "target": ".test-1",
      },
      Object {
        "content": "Test 2",
        "disableBeacon": true,
        "target": ".test-2",
      },
    ]
  }
  styles={
    Object {
      "buttonBack": Object {
        "color": undefined,
      },
      "options": Object {
        "arrowColor": "#fff",
        "backgroundColor": "#fff",
        "primaryColor": undefined,
        "textColor": "rgba(0, 0, 0, 0.87)",
        "zIndex": 1500,
      },
    }
  }
/>
`;
